--- a/milestones/m2-coding.ipynb
+++ b/milestones/m2-coding.ipynb
@@ -24,20 +24,10 @@
    "execution_count": 2,
    "id": "a28946aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset URL: https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020\n",
-      "License(s): CC0-1.0\n",
-      "formula-1-world-championship-1950-2020.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!kaggle datasets download -d rohanrao/formula-1-world-championship-1950-2020\n",
-    "!chmod 600 /Users/lewistu/.kaggle/kaggle.json"
+    "# Data is loaded from local data directory\n",
+    "# !kaggle datasets download -d rohanrao/formula-1-world-championship-1950-2020"
    ]
   },
   {
@@ -75,8 +65,8 @@
     }
    ],
    "source": [
-    "# Replace this with your file path\n",
-    "data_path = '/Users/lewistu/Documents/LewisTu/Harvard College/F25 Classes/CS 109A/cs109a_project/formula-1-world-championship-1950-2020/'\n",
+    "# Local data directory path\n",
+    "data_path = '../data/'\n",
     "\n",
     "try:\n",
     "    circuits = pd.read_csv(data_path + 'circuits.csv', na_values=r'\\N')\n",
@@ -1537,6 +1527,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5874307",
+   "metadata": {},
+   "source": [
+    "## Filter for genuine undercut attempts\n",
+    "\n",
+    "The raw dataset includes all cases where driver B pits before driver A within a 5-lap window, but many of these aren't true undercut attempts. An undercut only makes sense when drivers are in competitive positions. We'll filter for:\n",
+    "\n",
+    "1. **Close gap**: Drivers should be within ~20 seconds of each other\n",
+    "2. **Close positions**: Drivers should be within a few positions of each other\n",
+    "3. **Competitive positions**: Focus on drivers in points-scoring positions (top 15)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac7dbe57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Total pit stop sequences before filtering: {len(undercuts)}\")\n",
+    "print(f\"Success rate before filtering: {undercuts['undercut_success'].mean():.3f}\")\n",
+    "print(f\"\\nGap statistics (in seconds):\")\n",
+    "print(undercuts['gap_prev_ms'].describe() / 1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ee6f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for genuine undercut attempts\n",
+    "# Note: Driver A (ahead_driverId) is always immediately ahead of B in position by construction\n",
+    "# So both drivers are already adjacent in the race order.\n",
+    "# \n",
+    "# Filtering criteria:\n",
+    "# 1. Gap < 20 seconds (20000 ms) - drivers must be close enough for undercut to matter\n",
+    "# 2. Driver B in competitive positions (top 12) - focus on points-scoring battles\n",
+    "#    Since A is ahead of B, A will be in even better position\n",
+    "\n",
+    "MAX_GAP_MS = 20000  # 20 seconds - drivers within this gap can realistically undercut\n",
+    "MAX_POSITION = 12   # Focus on top 12 (points positions + battles for points)\n",
+    "\n",
+    "undercuts_filtered = undercuts[\n",
+    "    # Gap must be positive (B behind A) and within competitive range\n",
+    "    (undercuts['gap_prev_ms'] > 0) &\n",
+    "    (undercuts['gap_prev_ms'] < MAX_GAP_MS) &\n",
+    "    # B must be in competitive positions (A is ahead so automatically in better position)\n",
+    "    (undercuts['b_position_prev'] <= MAX_POSITION)\n",
+    "].copy()\n",
+    "\n",
+    "print(f\"\\nAfter filtering for genuine undercut attempts:\")\n",
+    "print(f\"Total undercut attempts: {len(undercuts_filtered)}\")\n",
+    "print(f\"Removed: {len(undercuts) - len(undercuts_filtered)} sequences ({100 * (len(undercuts) - len(undercuts_filtered)) / len(undercuts):.1f}%)\")\n",
+    "print(f\"\\nSuccess rate: {undercuts_filtered['undercut_success'].mean():.3f}\")\n",
+    "print(f\"Successful undercuts: {undercuts_filtered['undercut_success'].sum()}\")\n",
+    "print(f\"Unsuccessful undercuts: {(~undercuts_filtered['undercut_success'].astype(bool)).sum()}\")\n",
+    "\n",
+    "# Show gap distribution for filtered data\n",
+    "print(f\"\\nGap distribution for filtered attempts (seconds):\")\n",
+    "print(f\"  Mean: {undercuts_filtered['gap_prev_ms'].mean() / 1000:.2f}s\")\n",
+    "print(f\"  Median: {undercuts_filtered['gap_prev_ms'].median() / 1000:.2f}s\")\n",
+    "print(f\"  Max: {undercuts_filtered['gap_prev_ms'].max() / 1000:.2f}s\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30003938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update undercuts to be the filtered version\n",
+    "undercuts = undercuts_filtered.copy()\n",
+    "\n",
+    "print(f\"\\nFinal dataset:\")\n",
+    "print(f\"Total observations: {len(undercuts)}\")\n",
+    "print(f\"Success rate: {undercuts['undercut_success'].mean():.3f}\")\n",
+    "print(f\"\\nClass distribution:\")\n",
+    "print(undercuts['undercut_success'].value_counts())\n",
+    "print(f\"\\nImbalance ratio: {(1 - undercuts['undercut_success'].mean()) / undercuts['undercut_success'].mean():.1f}:1\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c4720f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "undercuts.head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff66fc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Comparison visualization\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "\n",
+    "# Before filtering - need to reload original\n",
+    "undercuts_original = pit_events[[\n",
+    "    'raceId','year','round','name','circuitId',\n",
+    "    'b_driverId','a_driverId',\n",
+    "    'lap',  # B pit lap \n",
+    "    'a_pit_lap',\n",
+    "    'gap_prev_ms',  # gap to A at end of lap before B pits\n",
+    "    'b_prev3_mean_ms','a_prev3_mean_ms',\n",
+    "    'b_laps_since_last_pit','a_laps_since_last_pit',\n",
+    "    'b_stint_no','a_stint_no',\n",
+    "    'pit_ms','a_pit_ms',\n",
+    "    'b_position_prev','b_position_post','a_position_post',\n",
+    "    'b_constructorId','a_constructorId',\n",
+    "    'b_grid','a_grid',\n",
+    "    'undercut_success'\n",
+    "]].rename(columns={'lap':'b_pit_lap'})\n",
+    "\n",
+    "# Before filtering\n",
+    "axes[0].bar(['Unsuccessful', 'Successful'], \n",
+    "            undercuts_original['undercut_success'].value_counts().sort_index(),\n",
+    "            color=['#d62728', '#2ca02c'])\n",
+    "axes[0].set_title(f'Before Filtering\\nSuccess Rate: {undercuts_original[\"undercut_success\"].mean():.1%}')\n",
+    "axes[0].set_ylabel('Count')\n",
+    "\n",
+    "# After filtering\n",
+    "axes[1].bar(['Unsuccessful', 'Successful'],\n",
+    "            undercuts_filtered['undercut_success'].value_counts().sort_index(),\n",
+    "            color=['#d62728', '#2ca02c'])\n",
+    "axes[1].set_title(f'After Filtering (Gap < 20s, Top 12)\\nSuccess Rate: {undercuts_filtered[\"undercut_success\"].mean():.1%}')\n",
+    "axes[1].set_ylabel('Count')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\nImprovement:\")\n",
+    "print(f\"  Original success rate: {undercuts_original['undercut_success'].mean():.1%}\")\n",
+    "print(f\"  Filtered success rate: {undercuts_filtered['undercut_success'].mean():.1%}\")\n",
+    "print(f\"  Improvement: {(undercuts_filtered['undercut_success'].mean() - undercuts_original['undercut_success'].mean()) / undercuts_original['undercut_success'].mean():.1%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1887741b",
+   "metadata": {},
+   "source": [
+    "## Summary of Filtering Impact\n",
+    "\n",
+    "By filtering for genuine undercut attempts (gap < 20s, driver B in top 15 positions), we've:\n",
+    "- Focused on **competitive situations** where undercut strategy matters\n",
+    "- Improved the **class balance** (though still imbalanced, it should be better than 6% success)\n",
+    "- Created a more **realistic dataset** for modeling undercut success\n",
+    "\n",
+    "The filtered dataset represents true strategic undercut attempts rather than all pit stop sequences.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "f4745357",
@@ -1849,11 +2002,19 @@
    "source": [
     "undercuts.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a508a5d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "cs1090a",
    "language": "python",
    "name": "python3"
   },
@@ -1867,7 +2028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
